[package]
name = "griddy"
version = "0.1.0"
edition = "2021"
authors = ["Marcelo Vogt"]
description = "A simple implementation of a general-purpose grid/matrix"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
